@@ -1,0 +1,34 @@
+#!/bin/sh
+# postinst script for doom-wad
+set -e
+. /usr/share/debconf/confmodule
+# summary of how this script can be called:
+#        * <postinst> `configure' <most-recently-configured-version>
+#        * <old-postinst> `abort-upgrade' <new version>
+#        * <conflictor's-postinst> `abort-remove' `in-favour' <package>
+#          <new-version>
+#        * <deconfigured's-postinst> `abort-deconfigure' `in-favour'
+#          <failed-install-package> <version> `removing'
+#          <conflicting-package> <version>
+
+case "$1" in
+	configure)
+		update-alternatives --install                \
+			/usr/share/games/doom/doom.wad      \
+			doom.wad                            \
+			/usr/share/games/game-package/doom.wad \
+			25
+	;;
+
+	abort-upgrade|abort-remove|abort-deconfigure)
+	;;
+
+	*)
+		echo "unsupported method $1" >&2
+		exit 1
+		;;
+esac
+
+
+
+exit 0
