@@ -1,0 +1,32 @@
+#!/bin/sh
+set -e
+
+# summary of how this script can be called:
+#        * <prerm> `remove'
+#        * <old-prerm> `upgrade' <new-version>
+#        * <new-prerm> `failed-upgrade' <old-version>
+#        * <conflictor's-prerm> `remove' `in-favour' <package> <new-version>
+#        * <deconfigured's-prerm> `deconfigure' `in-favour'
+#          <package-being-installed> <version> `removing'
+#          <conflicting-package> <version>
+# for details, see /usr/share/doc/packaging-manual/
+
+case "$1" in
+	remove|deconfigure)
+		update-alternatives --remove                 \
+			doom.wad                            \
+			/usr/share/games/game-package/doom.wad
+;;
+
+	upgrade|failed-upgrade)
+	;;
+
+	*)
+		echo "unsupported method $1" >&2
+		exit 1
+	;;
+esac
+
+
+
+exit 0
