@@ -1,0 +1,9 @@
+[Desktop Entry]
+Name=Doom
+GenericName=Doom
+Comment=First Person Shooter Game
+Exec=doom -iwad /usr/share/games/doom-package/doom.wad
+Icon=doom.xpm
+Terminal=false
+Type=Application
+Categories=Game
