@@ -1,0 +1,7 @@
+README.Debian for doom-wad
+---------------------------
+
+This package was generated by the make-wad-package program, to facilitate
+installation of the DOOM data files into a debian system.
+
+ -- Jon Dowland <jon@alcopop.org>, Sun, 01 Oct 2006 19:34:46 +0100
