@@ -1,0 +1,342 @@
+/* XPM */
+/*
+	based on the Doom Wikia logo by Fredrik Johansson
+	<http://doom.wikia.com/wiki/Image:Wikilogo.png>
+	Separate GPL licence granted:
+	<http://doom.wikia.com/index.php?title=User_talk:Fredrik&oldid=38426#wiki_logo_.2F_cute_caco_copyright>
+*/
+static char *Wiki[] = {
+/* columns rows colors chars-per-pixel */
+"62 73 257 2",
+"   c #010000",
+".  c #0B0200",
+"X  c #08090A",
+"o  c #070215",
+"O  c #061517",
+"+  c #140D06",
+"@  c #160603",
+"#  c #110418",
+"$  c #161610",
+"%  c #130022",
+"&  c #160729",
+"*  c #161528",
+"=  c #130E2D",
+"-  c #0F2328",
+";  c #270902",
+":  c #360803",
+">  c #381405",
+",  c #2A160F",
+"<  c #26073A",
+"1  c #251738",
+"2  c #2A172A",
+"3  c #352510",
+"4  c #373639",
+"5  c #2B2930",
+"6  c #192A4E",
+"7  c #2A1648",
+"8  c #300E4D",
+"9  c #3A1963",
+"0  c #3B0E68",
+"q  c #292448",
+"w  c #2A3747",
+"e  c #23365A",
+"r  c #352655",
+"t  c #36304C",
+"y  c #283D63",
+"u  c #333470",
+"i  c #1B1B41",
+"p  c #3A4222",
+"a  c #34444C",
+"s  c #2C4268",
+"d  c #31476D",
+"f  c #344B74",
+"g  c #395379",
+"h  c #2F4672",
+"j  c #4C0100",
+"k  c #460803",
+"l  c #461501",
+"z  c #540000",
+"x  c #5A0000",
+"c  c #540B00",
+"v  c #591802",
+"b  c #4D1914",
+"n  c #492506",
+"m  c #4A3901",
+"M  c #592603",
+"N  c #593600",
+"B  c #4D2C15",
+"V  c #4E2F2B",
+"C  c #630100",
+"Z  c #6C0000",
+"A  c #670900",
+"S  c #681600",
+"D  c #730100",
+"F  c #7A0100",
+"G  c #780900",
+"H  c #781600",
+"J  c #6C2400",
+"K  c #642402",
+"L  c #673800",
+"P  c #772401",
+"I  c #7A3600",
+"U  c #6D2A17",
+"Y  c #693734",
+"T  c #70342A",
+"R  c #401E3A",
+"E  c #441A69",
+"W  c #463351",
+"Q  c #422767",
+"!  c #4B2B76",
+"~  c #4B3877",
+"^  c #4D366A",
+"/  c #54255D",
+"(  c #4F4F06",
+")  c #564733",
+"_  c #714B04",
+"`  c #6C472F",
+"'  c #6E7402",
+"]  c #566B0E",
+"[  c #4A4644",
+"{  c #524F53",
+"}  c #484876",
+"|  c #465877",
+" . c #514F6E",
+".. c #516354",
+"X. c #516B75",
+"o. c #6F5250",
+"O. c #665168",
+"+. c #706D6D",
+"@. c #6D6257",
+"#. c #365186",
+"$. c #375BA7",
+"%. c #3C65A7",
+"&. c #513B83",
+"*. c #455A89",
+"=. c #584787",
+"-. c #57588C",
+";. c #514E8F",
+":. c #48668A",
+">. c #54688C",
+",. c #5B7986",
+"<. c #4E6A96",
+"1. c #605597",
+"2. c #6455A4",
+"3. c #614EA0",
+"4. c #68738E",
+"5. c #6A63AB",
+"6. c #716BB8",
+"7. c #4465A4",
+"8. c #716EC3",
+"9. c #203986",
+"0. c #6D8D00",
+"q. c #7CA800",
+"w. c #6BB400",
+"e. c #69C300",
+"r. c #62828E",
+"t. c #5E818C",
+"y. c #830100",
+"u. c #8A0200",
+"i. c #860C00",
+"p. c #871700",
+"a. c #920300",
+"s. c #990800",
+"d. c #961700",
+"f. c #911512",
+"g. c #8C2200",
+"h. c #862802",
+"j. c #873801",
+"k. c #932300",
+"l. c #992801",
+"z. c #963504",
+"x. c #943016",
+"c. c #903324",
+"v. c #A80600",
+"b. c #AB1B00",
+"n. c #A41700",
+"m. c #B70600",
+"M. c #B61700",
+"N. c #A32300",
+"B. c #AC2400",
+"V. c #A72B01",
+"C. c #A83604",
+"Z. c #B62701",
+"A. c #B83603",
+"S. c #AC3215",
+"D. c #A63724",
+"F. c #854400",
+"G. c #895600",
+"H. c #984500",
+"J. c #955900",
+"K. c #8E4411",
+"L. c #924F2F",
+"P. c #9B6502",
+"I. c #A64702",
+"U. c #A85200",
+"Y. c #B84506",
+"T. c #B95501",
+"R. c #B94A19",
+"E. c #B1492C",
+"W. c #A76A01",
+"Q. c #B47201",
+"!. c #927D39",
+"~. c #896257",
+"^. c #8C7370",
+"/. c #B95142",
+"(. c #975D56",
+"). c #C50700",
+"_. c #C51600",
+"`. c #D41300",
+"'. c #C62700",
+"]. c #C73803",
+"[. c #D52800",
+"{. c #D73802",
+"}. c #C63413",
+"|. c #E13302",
+" X c #D03728",
+".X c #C94605",
+"XX c #C75602",
+"oX c #D54604",
+"OX c #D54717",
+"+X c #D65403",
+"@X c #CA4F16",
+"#X c #D1502B",
+"$X c #D16B02",
+"%X c #E64805",
+"&X c #E85309",
+"*X c #EF5212",
+"=X c #E95425",
+"-X c #EA532D",
+";X c #ED6B00",
+":X c #E76502",
+">X c #EA7302",
+",X c #F36A04",
+"<X c #F96614",
+"1X c #F47200",
+"2X c #F97800",
+"3X c #F97316",
+"4X c #F56A30",
+"5X c #D56329",
+"6X c #D15846",
+"7X c #D8654F",
+"8X c #FB7747",
+"9X c #FA7553",
+"0X c #EF6A4D",
+"qX c #FA7A63",
+"wX c #E85A46",
+"eX c #8E7B8F",
+"rX c #8CAC01",
+"tX c #BB8C16",
+"yX c #8C827A",
+"uX c #AD8777",
+"iX c #8DCA00",
+"pX c #A7CF00",
+"aX c #A9ED00",
+"sX c #D48A01",
+"dX c #F78A00",
+"fX c #EF9007",
+"gX c #FEA500",
+"hX c #FF8151",
+"jX c #868585",
+"kX c #93918F",
+"lX c #AD918D",
+"zX c #AFACAC",
+"xX c #A0A1A3",
+"cX c #A19DCE",
+"vX c #CE9995",
+"bX c #D3A298",
+"nX c #D8A7A5",
+"mX c #D6B5B4",
+"MX c #CAB2B0",
+"NX c #EA9593",
+"BX c #EFA19E",
+"VX c #E5A8A6",
+"CX c #F2B4B2",
+"ZX c #DDC2BD",
+"AX c #CFCDCC",
+"SX c #DDE3E6",
+"DX c #F7CAC8",
+"FX c #FCD8D6",
+"GX c #EAD1CF",
+"HX c #FBE0D9",
+"JX c #E6E7E7",
+"KX c #FBE8E6",
+"LX c #FBFCFB",
+"PX c #F5F4F4",
+"IX c #F2F1F1",
+"UX c #BFBED7",
+"YX c None",
+/* pixels */
+"YXYXYXYXYXYXYXYXYXYXjXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYX+.LXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXyXLXjXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXyXLXJXjXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXkXLXLXjXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXAXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXkXLXLXSXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXIXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXyXLXLXLXjXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXJXSXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXyXLXPXLXSXjXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXIXAXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXjXPXLXLXLXxXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXSXIXAXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXyXPXLXPXLXLXjXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXSXLXAXAXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXyXJXLXLXLXLXzXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXIXLXUXUXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYX^.SXPXLXLXLXLX{ YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXSXLXIXAXzXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYX^.mXJXPXLXPXLXAXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXHXKXIXSXUXzXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYX~.mXHXPXLXLXLXLX+.YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX  YXlXFXFXGXCXMXxXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYX@.mXAXIXPXLXPXLXJX# YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX^.DXDXFXGXVXVXkXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYX@.MXmXJXPXPXLXPXPXMXYXYXYXYXYXYXYXYXYXj.v T Y ) ) Y b h.c j k : + O X @.SXKXFXGXJXnXnXyXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYX{ mXMXZXJXPXLXPXLXLX~.YXYXYXYXV T c.f.Z.n.f.x.S.x.x.d.d.A j Z F G D x L.mXFXFXGXAXbXVX@.YXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXMXmXMXSXIXLXPXLXLXGXo.: U G f.S.'.{.*XOXoX].@X+X}.%X{.A.C.S d.d.b.s.D G /.MXDXmXMXNXo.YXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXbXBXbXmXSXLXLXLXLXPXMXL.}.a.m.[.*X4X<X*X%XC.l.V.Y..X].{.oXV.z.H `.{.M.a.y.x./.vXZXzXY YXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXvXNXbXMXSXPXLXPXLXFXKXvXD.a.v.`.|.fX3X<X*XB.d.l.].A.]..X.X.Xz.P H [.|.{.m.a.u.S.lXxXB YXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXyXBXnXnXNXGXPXLXLXFXFXFXeXy.u.m.[.3X3X<X*XA.oX*X&X%X].A.A.%XY.I.h.x.A.].[.m.v.y.F U 5 YXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYX@.mXNXNXvXVXJXPXIXFXGXCXCXb i.Z._.<X3X<X*XA.&X<X&X%X[._.V.l.z.@XI.M Y..XA.n.v.v.y.C > YXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYX5 ZXNXNXMXBXCXGXFXHXFXCXFXo.D d.v.|.&X<X<X@X+X,X*X%X[.[.[.d.H A.k.S z.S.&X.XB.s.u.d.i.l YXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXn vXnXqXNXVXBXCXCXKXDXCXDXeXz p.u.[.%X%X*XT.+X<X&X%X%X{.|.Z.V.].A.A.Z.A.g.A.{.{.[.[.s.D uXLXMX( YXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXm ~.mXBXNXVXCXCXVXCXCXBXHXlXG N.s.b.{.V.C.V.}.&X{.%X%X%X|.oXY.oXXXoX{.A.k.A.'.].).m.m.u.D ZX4.YXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXS B lXBXNXNXnXCXCXCXNXBXKX@.A n.y.d.OX&XY.H N.]..X{.A.A.z.I.Y.z.V.oX.XoXA.'.V.'.`._.).m.F P ` YXYXYXYXYX",
+"YX) YXYXYXYXYXYXYXYXH D V lXNXNXNXVXDXDXBXCXGX5 M.i.a.H z.C.B.n.].].oX]..XC.j.z.P H k..X.XoX.XA.l.C.{.`.`.).m.y.YXYXYXYXYXYX",
+"YX- @.YXYXYXYXYXYXd.d.y.F V lXVXNXBXmXGXCXvXw D V.i.d.n.c j d.d.B.+X&XA.j.J M l.A.Y.C.p.l.C.].I.I.C.Z.n.d.m.).s.G YXYXYXYXYX",
+"YXYX+.+.YXYXYXYXV.p.H v j j : o.@.~.{ ~.L.T F x x x G Z D N.Z.V..XA.Z.u.x A i.k.h.: k n k : : p.S z.p.M.d.d.u.m.F K YXYXYXYX",
+"YXYX4 kXyX~.L.j.B.v.G P l.c C x C C z G s.y.s.s.s.y.Z V.C.].B.b.A.A.b.v.u.p.H l.> m _ 0.] ] M : P l.g.b.d.l.B.F y.S YXYXYXYX",
+"YXYX$ kXxXxXzX+.> v.s.d.C.C.h.H f.b.n.b.b.M.m.[.S.S.OX*X&X{.{.{.{.%X'.).G h.G S ( 0.0.0.' q.w.l : H n.p.Y.A.A.B.a.y.> YXYXYX",
+"YXYXYXjXzXAXAXIXzXV v.m.m.n.d.K.Y.B.V.&X%X*X4X#Xx.@XR.v.).).).).).[.&Xm.i.d.G _ 0.0.( , $ 0.iX] > ; u.p.@XC.A.A.'.s.k YXYXYX",
+"YXYXYX[ zXUXSXIXLXGX^.u.m.v.s.oX3X<X4X3X<X5X#X#X5Xz.A.l.d.s.M._._.).{.&Xy.D A ' e.0.o   ; # iX' ( A F M..XA.@X#XOXb.y.YXYXYX",
+"YXYXYX5 zXMXAXSXIXHXFXeXp.v.a.[.<X3XfX>X@X5XE.5X8XwX4X@XA.k.p.l.V.A.b.OXi.Z A 0.e.0.o + , o e.rX0.Z u.M.}.OX+X.X}.d.a.YXYXYX",
+"YXYXYXYX+.VXNXmXSXGXDXDX^.C y.G %X3X>X@X$X0X0X5XhXqXhX4X=X-X#Xz.z.C.n.A.d.x v ' w.q.o @ ; # q.q.rXC F Z.#X4X4X&X=X_.a.k YXYX",
+"YXYXYXYXV MXnXbXmXmXGXCXZX) a.s.N.4X5X:X4XqX7X7X9X7X4X4X9XqX4X0Xc.D.-X|.d.Z G _ pXpX0., , $ aXw.rXy.y.}.4X4X8X*X-X Xa.x YXYX",
+"YXYXYXYX3 eXMXVXnXnXVXBXGXX.u.m.k.I z.x.6X0X#X5X5X7X8X4X9X0X8XqXwX7X6XZ._.u.D L q.aXaXpXq.iXiXrX0.y.v.4X9X9X9X%X-X6Xd.l.YXYX",
+"YXYXYXYXD b lXVXnXnXVXBXCX..y.).B.h.S H  XOXR.Y.C.7X9X9X7XwX9X9X9X0X0X#XOX_.a.F M rXaXpXiXrX0.iXF.y.}.hX8X8X-X=X-XwXl.l.YXYX",
+"YXYXYXYXC C Y lXvXmXmXAXO.v u.%X+Xz.k c c.> @ M l.E.E.0XqX9XqX-X9XhXqXwX-X-X-XD.F b ' rXpXiXq.( i.a.-XhX4X4X6X#X6X/.[.F YXYX",
+"YXYXYXYXZ Z F T lXmXMX4 > N.&X{.<X.Xp.S # 7 < * T c.x.x.c.7X7X5XhX8X0X0XwX0XwX XS.y.f.x.j.N I F S.-X9X#X6XL.D.U c.x m.D YXYX",
+"YXYXYX$ y.Z x j k k b Z d.'.[.*XoXz.g., 1 & o o { (.P H x.#XE.E.6X7X7X5X0X-XV.0X-XS.M.n.u.v.l.k.D.6X6XD./.T Y $ O.4 l y.: YX",
+"YXYXYX; F j x z z D Z d.A.%X*X*Xz.h.p., & o o o +.mXxX# l U E.p.l.=X7X7X6XwXR.wX-X#X[.@Xl.l.x.h./././.U V 4 o 5 FX+.O c k YX",
+"YXYXYX: G j z A j G y.A.oX%X*X%X{.A.d.2 & # o # { GXmXo o 1 3 T V V b /.7X#X#X-X#XS.qX6XS.x.S.E.E.E.U ^.xX+.% * vXO.7 ; k YX",
+"YXYXYX: D x p.P H b.Y.,X*X*X%X%X%X].p.$ 7 o # % Q MXuX# o & = mXKXkX- * jX4.t 4 o.^.o.2 Y o.Y (.Y q ^.HXKX+.% & { t = @ k YX",
+"YXYXYXYXD y.g.j G A.&X<X3X*X%X%X*XOX}.V < % % & / lX4 # o o < lXFX+.r o - MXHXPXjXeXW t ~.VXVX(.r 7  .KXGX .& 1 [ 1 & @ k YX",
+"YXYXYXYXD a.s.y.d.l.+XOX<X<X%X|.{.[.S.T R # % 8 8 @.5 & o & < ^.DXO.r % * eXHXLX+.1 * = W DXFX4 = = 4 KXGX{ 8 < r * % + k YX",
+"YXYXYXYXF d.a.v.b.d.C..XoX&Xb.v.oXl.x x.R % # 8 < V & # < < 8 ..kXq q 1 7 ^.DXLXxX1 = = t vXMXi o q 5 HXZX{ 8 # 8 % # $ YXYX",
+"YXYXYXYXD u.B.s.d.Z.'.A.l.i.B.+Xb.M.V.S.T < # 0 8 9 < < 8 7 8 { o.1 q q ;.zXDXZXt t * 6 ^ yX^.r o 1 q ^.mX/ E < < # < 2 YXYX",
+"YXYXYXYXA a.u.B.b.i.p.A g.d.+X[.v.a.Z.Y.T R < < 8 8 9 / Q r 7 ^ $ r r u cXeXVXlX7 5 r u f ^.o.=.r t r [ xXQ E 4 4 & < $ YXYX",
+"YXYXYXYXz u.a.D k.N.s.A C A.%X_.m.v.m.l.x.T / 8 < 9 r +.W 8 & Q r =.3.cXeX^ bX^.;.h =.UX2.W u 2.=.u t 5 ..W 0 { +.% 8 + YXYX",
+"YXYXYXYXj a.F D l.n.v.i.C '.'.'._.).).s.Y.E.L./ < 7 t AX^ 9 < 1 ~ =.1.eX5.1.vX~.6.7.f eXUX2.1.2.3.~ r q 5 Q u +.zX8 r ; YXYX",
+"YXYXYXYX; y.Z l.d.a.d.p.A C.oX{.{.).).=X%XOXL./ ^ $ zXAX{ 9 1 1 ~ 1.2.2.2.3.{ W 8.6.;.=.8.6.5.3.2.} t < Q Q 9 kXLX .$ j YXYX",
+"YXYXYXYXYXC F l.u.y.u.b.B.Y.oXoXoX_.m.}.=XN.C.c./ O.DXDX{ 9 r r ^ } =.2.5.6.W 1.6.8.;.;.6.6.5.3.=.^ y 1 Q E R bXPXX.: : YXYX",
+"YXYXYXYXYXz l.A u.i.y.d.A.C.oX{.'._.).).=X}..Xc.U ^.HXAX{ 9 r ^ } [  .2.5.6.2.2.5.5.1.;.5.2.2.3. .{ ^ 8 Q Q 2 nXGX[ D YXYXYX",
+"YXYXYXYXYX: G D G p.F n.C.S l.%X{.'.).).[.-XOXS.P V kXAXW 9 7 &.W 4.[ 3.2.2.2.2.2.;.2.2.2.2.2.=.O.r.{ ! ^ Q = lX` P y.YXYXYX",
+"YXYXYXYXYXYXZ F C p.F B.p.S k.oXoX]._.).M.A.R.#X%XS > { r ! ~ ! { AX{ =.=.=.3.2. .4 =.=.=.=.1.=.@.PX+.! ~ ^ q B S M.k YXYXYX",
+"YXYXYXYXYXYX> y.Z G G d.p.H g.Z.Z.'.{.N.N.b.OX4X<X{.k.> R Q ! Q @.DX{ &.=.=.=.=.} ..^ =.} &.=.~ ^.LX+.^ ~ ~ V l.#Xd.YXYXYXYX",
+"YXYXYXYXYXYXO F D C l.i.g.p.p.G Z.].B.V.B.{.%X*X4X=X*XP K 5 9 u eXFXo.! ! ~ ~ ! O.lX{ ! ! ! ! ^ uXKXkXu u V x.A.S.A YXYXYXYX",
+"YXYXYXYXYXYXYX; u.Z D g.d.d.H C G d.p.d.'.Z.M.|.|.-X=X_.g.P 3 Y 7XCX+.&.! ! ! Q @.FX[ ! Q / E Q lXPXzX1 v l.OX[.y.: YXYXYXYX",
+"YXYXYXYXYXYXYXYXj y.F h.l.Z y.x j x n.M.'.M.M.m.'.*X=X=X@XA.S c ` ` { W Q Q E Q yXPX+.0 E 0 9 W +.~.3 K .X#X4Xd.z YXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXD y.D G Z D Z j z Z G b.v.m.m.m._.{.#X=XOXk.S D.B M Y 7 8 9 W jXmXjXt 0 E E W T K.S z.@X=XOXd.YXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYX; y.F Z x x Z C C C C G y.v.v.v.s.M.'.}.=X+Xk.S.D.D.S.U U Y 5 ) ` o.) V Y L.F.C.oXS.z.-XOXZ.c YXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYX; u.D Z z z C D Z F F Z y.u.v.M.v.s.Z.N.C.Z.%XY.C.4X5X#XR.D.R.XXY.XX.X@X=X=X4X=X#Xl.[.Z.H YXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXX j F Z D z z C C i.d.D C Z p.Z.Z.Z.a.n.C.'.].{.oX:X%X<X4X@X X=X=X|.=X=X*X4X-X#XoX{.b.d.YXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXYXYXk D Z Z x x G k.Z D Z Z p.p.b.n.A d.d.Z.n.M.'.M.b.].oXA.A.-X#X#XOX}.].A.x.h.Z.].F YXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXYXYXYX: F D Z Z G F Z C Z Z H H d.S C l.a.D y.a.s.'.'.'.oXp.].*XoXOXA.p.k.H C D ].i.YXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXYXYXYXYX+ y.F Z Z Z Z x C Z F D H j C u.F F F y.F u.u.s.n.G .XC.g.k.p.H H H F F u.YXYXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXYXYXYXYXYX3 x D D Z Z Z x z A G d.x C C Z F D F F D D D D G N.C C C Z D F F F D YXYXYXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXn l z F Z x Z Z x C D z z z x Z D D Z Z Z D C k.F F F y.y.u.y.Z k YXYXYXYXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX> : z D D Z Z Z Z D C x z C C D D F D D D i.D F F F y.F c YXYXYXYXYXYXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX; j y.F F x x C D z C Z Z D Z Z Z Z C D D y.F k > M YXYXYXYXYXYXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX: z z z z Z D D C C C C C C j C b 3 YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX",
+"YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX: : : > : l b k b b : l 1 YXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYXYX"
+};
